--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Our Menu</title>
+	<link rel="stylesheet" href="style.css">
+	
+</head>
+<body>
+	<h1>Our Menu</h1>
+	<div class="p1">
+		<div class="child">Chicken</div>
+		<p>Hi, How are you today?</p>
+		
+	</div>
+	<div class="p2">
+		<div class="child">Beef</div>
+		<p>What a splendid evening! Joy!</p>
+		
+	</div>
+	<div class="p3">
+		<div class="child">Sushi</div>
+		<p>I would like a good day rest!</p>
+	</div>
 
+</body>
+</html>
